force-app/main/default/objects/Loyalty__c/Loyalty__c.object-meta.xml
<CustomObject>
    <description
  >This object will hold information like Loyal Card Number, Total Loyalty Points, Total Loyalty Points Redeemed.</description>
    <label>Loyalty</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Loyalty Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>