force-app/main/default/objects/Loyalty__c/fields/Loyalty_Card_Blocked_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Card_Blocked_Date__c</fullName>
    <label>Loyalty Card Blocked Date</label>
    <type>Date</type>
</CustomField>