force-app/main/default/objects/Loyalty__c/fields/Loyalty_Card_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Card_Created_Date__c</fullName>
    <label>Loyalty Card Created Date</label>
    <type>DateTime</type>
</CustomField>