force-app/main/default/objects/Loyalty__c/fields/Loyalty_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Card_Number__c</fullName>
    <label>Loyalty Card Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>