force-app/main/default/objects/Loyalty__c/fields/Loyalty_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Card_Status__c</fullName>
    <label>Loyalty Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>