force-app/main/default/objects/Loyalty__c/fields/Loyalty_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Consumer__c</fullName>
    <label>Loyalty Consumer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loyalty</relationshipLabel>
    <relationshipName>Loyalty</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>