force-app/main/default/objects/Loyalty__c/fields/Loyalty_Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Total_Points__c</fullName>
    <label>Loyalty Total Points</label>
    <summarizedField>Loyalty_Transaction__c.Transaction_Amount__c</summarizedField>
    <summaryForeignKey>Loyalty_Transaction__c.Loyalty__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>