force-app/main/default/objects/Loyalty__c/validationRules/Not_able_to_change_Inactive_to_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_able_to_change_Inactive_to_Active</fullName>
    <active>false</active>
    <errorConditionFormula
  >AND( ISCHANGED(Loyalty_Card_Status__c), ISPICKVAL(PRIORVALUE(Loyalty_Card_Status__c),&quot;Inactive&quot;))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Cannot change Inactive to Active</errorMessage>
</ValidationRule>